<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.astudent.partner.Fragments.ContactShareFragment">

    <LinearLayout
        android:id="@+id/lnrTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/desc"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_back" />

        <com.astudent.partner.Utils.ClanProTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:text="@string/menu_share_to_contact"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lnrTitle"
        android:layout_above="@+id/share_btn"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:scrollbars="vertical" />

    <RelativeLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc"
            android:tint="@color/btn_color"
            app:srcCompat="@drawable/calendar_clock" />

        <com.astudent.partner.Utils.ClanProTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/no_contacts"
            android:textColor="@color/btn_color"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/share_btn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:text="@string/menu_share"/>

</RelativeLayout>