<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_bg"
    android:orientation="vertical"
    tools:context="com.astudent.partner.Activity.ActivityPassword">

    <LinearLayout
        android:id="@+id/emailpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_125sdp"
            android:layout_height="@dimen/_125sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:orientation="vertical">

            <com.astudent.partner.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/user_name"
                android:textSize="@dimen/_11sdp" />

            <com.astudent.partner.Utils.ClanProEditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/btn_color"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:orientation="vertical">

            <com.astudent.partner.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/user_name"
                android:textSize="@dimen/_11sdp" />


            <com.astudent.partner.Utils.ClanProEditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/btn_color" />


        </LinearLayout>


        <com.astudent.partner.Utils.ClanProButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/common_signin_button_text"
            android:textSize="@dimen/_14sdp" />

        <com.astudent.partner.Utils.ClanProTextView
            android:id="@+id/skipLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp"
            android:visibility="gone" />


        <com.astudent.partner.Utils.ClanProTextView
            android:id="@+id/lblforgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/user_name"
            android:textSize="@dimen/_11sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailpwd"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <com.astudent.partner.Utils.ClanProTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:text="(OR)"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_11sdp" />

        <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            facebook:com_facebook_login_text="@string/FB_login_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/color_bg_sign_up"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lnrRegister"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <com.astudent.partner.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/no_account"
                android:textColor="@color/user_name"
                android:textSize="@dimen/_12sdp" />

            <com.astudent.partner.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <com.astudent.partner.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/here"
                android:textColor="@color/user_name"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
